--- a/news.html
+++ b/news.html
@@ -60,11 +60,33 @@
             transform: translateY(0);
         }
 
-        /* Post card hover */
-        .news-post {
-            border: 1px solid transparent;
-            transition: transform 0.22s ease, box-shadow 0.22s ease, border-color 0.22s ease;
-        }
+        /* Post card hover + search filter animation */
+.news-post {
+    border: 1px solid transparent;
+    overflow: hidden;
+    max-height: var(--mh, 2000px);
+    transition:
+        opacity 0.38s ease,
+        transform 0.38s ease,
+        max-height 0.55s cubic-bezier(0.25, 0.46, 0.45, 0.94),
+        padding 0.55s cubic-bezier(0.25, 0.46, 0.45, 0.94),
+        margin 0.55s cubic-bezier(0.25, 0.46, 0.45, 0.94),
+        border-width 0.55s cubic-bezier(0.25, 0.46, 0.45, 0.94),
+        box-shadow 0.22s ease,
+        border-color 0.22s ease;
+    will-change: max-height, opacity, transform;
+}
+.news-post.hidden-filter {
+    opacity: 0;
+    transform: scale(0.95);
+    max-height: 0 !important;
+    padding-top: 0 !important;
+    padding-bottom: 0 !important;
+    margin-top: 0 !important;
+    margin-bottom: 0 !important;
+    border-width: 0 !important;
+    pointer-events: none;
+}
         .news-post:hover {
             transform: translateY(-4px);
             box-shadow: 0 18px 55px rgba(0, 0, 0, 0.08);
@@ -130,78 +152,7 @@
         }
 
     
-        /* Floating Search (title-only) */
-        #news-search-float {
-            position: fixed;
-            left: 1.5rem;
-            right: auto;
-            top: calc(var(--yk-header-h) + 14px);
-            z-index: 40; /* below header (z-50), above content */
-            display: inline-flex;
-            align-items: center;
-            gap: 0.55rem;
-            padding: 0.58rem 0.86rem;
-            border-radius: 9999px;
-            font-weight: 600;
-            font-size: 0.90rem;
-            letter-spacing: 0.1px;
-            border: 1px solid rgba(226, 232, 240, 0.85);
-            background: rgba(255, 255, 255, 0.82);
-            color: rgba(17, 24, 39, 0.92);
-            backdrop-filter: blur(12px);
-            box-shadow: 0 16px 46px rgba(0, 0, 0, 0.10);
-            transition: opacity 0.18s ease, transform 0.18s ease, box-shadow 0.18s ease, border-color 0.18s ease;
-        }
-        .dark #news-search-float {
-            border-color: rgba(55, 65, 81, 0.85);
-            background: rgba(17, 24, 39, 0.68);
-            color: rgba(243, 244, 246, 0.96);
-            box-shadow: 0 18px 55px rgba(0, 0, 0, 0.35);
-        }
-        #news-search-float:hover {
-            transform: translateY(-1px);
-            border-color: rgba(245, 158, 11, 0.45);
-            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.14);
-        }
-        .dark #news-search-float:hover {
-            box-shadow: 0 22px 70px rgba(0, 0, 0, 0.45);
-        }
-        #news-search-float.hidden-float {
-            opacity: 0;
-            transform: translateY(-8px) scale(0.98);
-            pointer-events: none;
-        }
-        #news-search-float i {
-            opacity: 0.75;
-        }
-        #news-search-input {
-            width: min(320px, 62vw);
-            background: transparent;
-            border: none;
-            outline: none;
-            padding: 0;
-            margin: 0;
-            color: inherit;
-            font-weight: 600;
-        }
-        #news-search-input::placeholder {
-            color: rgba(107, 114, 128, 0.9);
-        }
-        .dark #news-search-input::placeholder {
-            color: rgba(156, 163, 175, 0.9);
-        }
-
-        @media (max-width: 480px) {
-            #news-search-float {
-                left: 0.9rem;
-                right: auto;
-                padding: 0.56rem 0.78rem;
-                font-size: 0.86rem;
-            }
-            #news-search-input { width: min(240px, 64vw); }
-        }
-
-    </style>
+        </style>
 
     <script>
         // Theme preload to avoid FOUC
@@ -251,13 +202,6 @@
         <i class="fas fa-arrow-left"></i> Back to Main
     </a>
 
-    
-    <!-- Floating Search (title only) -->
-    <div id="news-search-float" class="hidden-float" role="search" aria-label="Search news titles">
-        <i class="fas fa-magnifying-glass"></i>
-        <input id="news-search-input" type="text" placeholder="Search titles..." autocomplete="off" />
-    </div>
-
 <!-- News Hero -->
     <section id="news-hero" class="pt-28 pb-14 text-white">
         <div class="container mx-auto px-6">
@@ -274,10 +218,10 @@
                         <i class="fas fa-arrow-left"></i> Back to Main
                     </a>
 
-                    <div id="news-search-hero" class="relative inline-flex items-center gap-2 bg-white/10 hover:bg-white/15 border border-white/10 focus-within:border-amber-300/60 rounded-lg px-4 py-2.5 backdrop-blur-sm transition-colors">
+                    <div id="news-search-hero" class="relative inline-flex items-center gap-2 bg-white/10 hover:bg-white/15 border border-white/10 focus-within:border-amber-300/60 rounded-lg px-5 py-2.5 backdrop-blur-sm transition-colors">
                         <i class="fas fa-magnifying-glass text-white/85"></i>
                         <input id="news-search-input-hero" type="text" placeholder="Search titles..." autocomplete="off"
-                               class="bg-transparent border-0 outline-none text-white placeholder:text-white/60 w-64 md:w-72 font-semibold text-sm" />
+                               class="bg-transparent border-0 outline-none text-white placeholder:text-white/60 w-64 md:w-72 font-semibold text-base" />
                     </div>
 
 </div>
@@ -491,16 +435,35 @@ const header = document.getElementById('header');
                 return String(raw || '').trim().toLowerCase();
             };
 
-            const applyNewsSearch = () => {
-                if (!newsPosts) return;
-                const q = getSearchQuery();
-                const cards = newsPosts.querySelectorAll('.news-post');
-                cards.forEach(card => {
-                    const t = (card.querySelector('h2')?.textContent || '').toLowerCase();
-                    const match = (!q) || t.includes(q);
-                    card.style.display = match ? '' : 'none';
-                });
-            };
+            const setCardMaxHeight = (el, extra = 0) => {
+    if (!el) return;
+    // scrollHeight already includes padding for visible cards
+    const h = el.scrollHeight + extra;
+    el.style.setProperty('--mh', `${Math.max(0, Math.round(h))}px`);
+};
+
+const refreshNewsHeights = () => {
+    if (!newsPosts) return;
+    newsPosts.querySelectorAll('.news-post').forEach(card => setCardMaxHeight(card, 120));
+};
+
+const applyNewsSearch = () => {
+    if (!newsPosts) return;
+    const q = getSearchQuery();
+    const cards = Array.from(newsPosts.querySelectorAll('.news-post'));
+
+    // Update max-height target for smooth collapse/expand
+    cards.forEach(card => setCardMaxHeight(card, 120));
+
+    cards.forEach(card => {
+        const t = (card.querySelector('h2')?.textContent || '').toLowerCase();
+        const match = (!q) || t.includes(q);
+        card.classList.toggle('hidden-filter', !match);
+    });
+
+    // In case content layout changed (e.g., responsive), re-measure next frame
+    requestAnimationFrame(refreshNewsHeights);
+};
 
             const clearSearch = () => {
                 if (searchInput) searchInput.value = '';
@@ -526,6 +489,11 @@ const header = document.getElementById('header');
 
             wireSearch(searchHeroInput);
             wireSearch(searchInput);
+
+            window.addEventListener('resize', () => {
+                refreshNewsHeights();
+                applyNewsSearch();
+            });
 
 
             const escapeHtml = (unsafe = '') => {
@@ -603,6 +571,7 @@ const header = document.getElementById('header');
                     newsPosts.innerHTML = sorted.map(buildPost).join('\n');
                     if (newsLoading) newsLoading.classList.add('hidden');
                     newsPosts.classList.remove('hidden');
+                    requestAnimationFrame(refreshNewsHeights);
                     applyNewsSearch();
                 } catch (err) {
                     console.error(err);
