--- a/index.html
+++ b/index.html
@@ -1719,6 +1719,105 @@
                     .replace(/'/g, '&#039;');
             };
 
+            const normalizeThumbSrc = (src = '') => {
+                const s = String(src || '').trim();
+                if (!s) return '';
+                // Keep data URLs as-is (e.g., base64 images)
+                if (/^data:/i.test(s)) return s;
+                // Encode spaces / unicode in relative URLs (helps with .jpg paths with spaces, etc.)
+                try { return encodeURI(s); } catch (_) { return s; }
+            };
+
+            // If a thumbnail fails to load, try common extension variants (case, jpg<->jpeg)
+            const getAltThumbCandidates = (url = '') => {
+                const u = String(url || '').trim();
+                if (!u) return [];
+                if (/^data:/i.test(u) || /^https?:\/\//i.test(u)) return [];
+                const m = u.match(/^(.*?)(\.[^./?#]+)([?#].*)?$/);
+                if (!m) return [];
+                const base = m[1];
+                const ext = m[2];
+                const tail = m[3] || '';
+                const lower = ext.toLowerCase();
+
+                const exts = new Set([lower, lower.toUpperCase()]);
+                if (lower === '.jpg') {
+                    exts.add('.jpeg');
+                    exts.add('.JPEG');
+                } else if (lower === '.jpeg') {
+                    exts.add('.jpg');
+                    exts.add('.JPG');
+                }
+
+                const out = [];
+                for (const e of exts) {
+                    const cand = `${base}${e}${tail}`;
+                    if (cand !== u) out.push(cand);
+                }
+                return out;
+            };
+
+            const wireThumbnailImages = (root) => {
+                if (!root) return;
+                const imgs = root.querySelectorAll('img[data-yk-orig]');
+                imgs.forEach((img) => {
+                    const wrap = img.closest('.yk-thumb-wrap');
+                    const fallback = wrap ? wrap.querySelector('.yk-thumb-fallback') : null;
+
+                    const showFallback = () => { if (fallback) fallback.classList.remove('hidden'); };
+                    const hideFallback = () => { if (fallback) fallback.classList.add('hidden'); };
+
+                    const readTried = () => {
+                        try { return new Set(JSON.parse(img.dataset.ykTried || '[]')); }
+                        catch (_) { return new Set(); }
+                    };
+                    const writeTried = (set) => {
+                        try { img.dataset.ykTried = JSON.stringify(Array.from(set)); }
+                        catch (_) {}
+                    };
+
+                    const tryNextCandidate = () => {
+                        const tried = readTried();
+                        const current = img.getAttribute('src') || '';
+                        if (current) tried.add(current);
+
+                        const orig = img.dataset.ykOrig || '';
+                        const candidates = getAltThumbCandidates(orig);
+
+                        for (const c of candidates) {
+                            const normalized = normalizeThumbSrc(c);
+                            if (tried.has(normalized)) continue;
+                            tried.add(normalized);
+                            writeTried(tried);
+                            img.src = normalized;
+                            return true;
+                        }
+                        writeTried(tried);
+                        return false;
+                    };
+
+                    const onLoad = () => {
+                        hideFallback();
+                        img.style.display = '';
+                    };
+
+                    const onError = () => {
+                        if (tryNextCandidate()) return;
+                        img.style.display = 'none';
+                        showFallback();
+                    };
+
+                    img.addEventListener('load', onLoad);
+                    img.addEventListener('error', onError);
+
+                    // Handle cached images (or immediate failures)
+                    if (img.complete) {
+                        if (img.naturalWidth > 0) onLoad();
+                        else onError();
+                    }
+                });
+            };
+
 
             // --- News: load preview (top 5) from JSON (data/news.json) ---
             const newsLoading = document.getElementById('news-loading');
@@ -2086,9 +2185,11 @@ const _applyOverlaySearch = () => {
                 return `
                     <article id="post-${escapeHtml(id)}" class="yk-post bg-white dark:bg-gray-800 p-6 rounded-lg shadow-sm scroll-mt-28">
                         <div class="flex flex-col md:flex-row gap-6 items-start">
-                            <div class="relative w-full md:w-56 h-44 rounded-lg overflow-hidden flex-shrink-0 bg-gray-100 dark:bg-gray-700 flex items-center justify-center">
-                                <i class="fas ${escapeHtml(icon)} text-gray-400 dark:text-gray-500 text-3xl absolute"></i>
-                                ${thumb ? `<img src="${escapeHtml(thumb)}" alt="${escapeHtml(title)} thumbnail" class="w-full h-full object-cover relative z-10" loading="lazy" onerror="this.style.display='none';">` : ''}
+                            <div class="yk-thumb-wrap relative w-full md:w-56 h-44 rounded-lg overflow-hidden flex-shrink-0 bg-white dark:bg-white flex items-center justify-center border border-gray-200/70 dark:border-gray-600/40">
+                                <div class="yk-thumb-fallback absolute inset-0 flex items-center justify-center ${thumb ? 'hidden' : ''}">
+                                    <i class="fas ${escapeHtml(icon)} text-gray-400 text-3xl"></i>
+                                </div>
+                                ${thumb ? `<img src="${escapeHtml(normalizeThumbSrc(thumb))}" data-yk-orig="${escapeHtml(thumb)}" alt="${escapeHtml(title)} thumbnail" class="w-full h-full object-contain relative z-10" loading="lazy">` : ''}
                             </div>
                             <div class="flex-grow">
                                 <p class="text-sm text-gray-500 dark:text-gray-400">${escapeHtml(formatOverlayDate(dateIso))}</p>
@@ -2194,6 +2295,7 @@ const _applyOverlaySearch = () => {
 
                     if (ykNewsPostsEl) {
                         ykNewsPostsEl.innerHTML = sorted.map(buildOverlayPost).join('\n');
+                        wireThumbnailImages(ykNewsPostsEl);
                         if (ykNewsLoadingEl) ykNewsLoadingEl.classList.add('hidden');
                         ykNewsPostsEl.classList.remove('hidden');
                     }
